fix: implement lightweight functionality for conditional requests and fix caching interceptor

--- a/frontend/src/app/features/admin/admin-amenities-page/admin-amenities-page.component.html
+++ b/frontend/src/app/features/admin/admin-amenities-page/admin-amenities-page.component.html
@@ -13,7 +13,7 @@
   <div class="divider mb-3 mt-3"></div>
 
   <!-- If no amenities -->
-  <div class="loader" *ngIf="isLoading"></div>
+  <div class="loader w-100" *ngIf="isLoading"></div>
 
   <div class="no-posts-found" *ngIf="amenities?.length === 0 && !isLoading">
     <i class="circle-icon fa-solid fa-magnifying-glass"></i>
