--- a/frontend/src/app/features/service-providers/service-providers-reviews-and-posts/service-providers-reviews-and-posts.component.html
+++ b/frontend/src/app/features/service-providers/service-providers-reviews-and-posts/service-providers-reviews-and-posts.component.html
@@ -51,7 +51,7 @@
               </span>
               <div>
                 <span class="post-date">
-                  {{ review.createdAt | date }}
+                  {{ formatFNSDate(review.createdAt) }}
                 </span>
               </div>
             </div>
