--- a/frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/frontend/src/app/shared/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg custom-navbar">
     <div class="container-xl">
       <div class="d-flex justify-content-between align-items-center w-100">
-        <a class="navbar-brand" (click)="routeBasedOnRole()">
+        <a type="button" class="navbar-brand" (click)="routeBasedOnRole()">
           <div class="f-r-c-c">
             <svg
               class="svg-logo"
