--- a/frontend/src/app/features/user-profile/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/features/user-profile/user-profile-page/user-profile-page.component.html
@@ -33,7 +33,10 @@
                 />
               </div>
             </div>
-            <h6 class="bold mb-5 font-size-24">{{ currentUser?.name }}</h6>
+            <h6 class="bold font-size-24">{{ currentUser?.name }}</h6>
+            <h3 class="mt-2 normal" style="color: rgba(237, 235, 232, 0.429)">
+              {{ currentUser?.surname }}
+            </h3>
           </div>
         </div>
         <div class="col-md-8">
@@ -68,7 +71,7 @@
                   {{ 'USER-PROFILE-PAGE.USER_SINCE' | translate }}
                 </p>
                 <h6 class="text-muted f-w-400">
-                  {{ currentUser?.userSince }}
+                  {{ formatUserCreationDate(currentUser?.creationDate) }}
                 </h6>
               </div>
             </div>
